@@ -1,4 +1,5 @@
 #!/bin/bash
 
 echo "Starting Memory Game Client..."
-java -cp "bin:lib/*" Main client
+JAVAFX_PATH="lib/javafx-sdk-21.0.2/lib"
+java --module-path "$JAVAFX_PATH" --add-modules javafx.controls,javafx.fxml,javafx.media -cp "bin:lib/*" Main client
